# oximo

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-issue.md  feature_request.md
.github/workflows/: ci.yml
crates/oximo/: Cargo.toml  README.md
crates/oximo-baron/: README.md
crates/oximo-baron/src/: lib.rs  options.rs  translate.rs
crates/oximo-core/: Cargo.toml  README.md
crates/oximo-core/src/: constraint.rs  domain.rs  error.rs  indexed.rs  lib.rs  model.rs  objective.rs  param.rs  prelude.rs  set.rs  sum.rs  var.rs
crates/oximo-core/tests/: model.rs  set.rs
crates/oximo-expr/: Cargo.toml  README.md
crates/oximo-expr/src/: arena.rs  classify.rs  eval.rs  handle.rs  lib.rs  linear.rs  ops.rs  quadratic.rs  simplify.rs  visit.rs
crates/oximo-expr/tests/: arithmetic.rs
crates/oximo-gams/: Cargo.toml  README.md
crates/oximo-gams/src/: lib.rs  options.rs  solver_options.rs  translate.rs
crates/oximo-gurobi/: Cargo.toml  README.md
crates/oximo-gurobi/src/: lib.rs  nonlinear.rs  options.rs  translate.rs
crates/oximo-gurobi/tests/: nonlinear.rs
crates/oximo-highs/: Cargo.toml  README.md
crates/oximo-highs/src/: lib.rs  options.rs  translate.rs
crates/oximo-io/: Cargo.toml  README.md
crates/oximo-io/src/: error.rs  lib.rs  lp.rs  mps.rs
crates/oximo-io/src/nl/: analyze.rs  emit_expr.rs  header.rs  mod.rs  options.rs
crates/oximo-io/tests/: nl_options.rs  nl_solver.rs
crates/oximo-solver/: Cargo.toml  README.md
crates/oximo-solver/src/: lib.rs  options.rs  result.rs  solver.rs
crates/oximo/examples/: baron_robot.rs  lot_sizing.rs  parametric_pricing.rs  process_selection.rs  reaction_path.rs  transport.rs
crates/oximo/src/: lib.rs
crates/oximo/tests/: solve.rs  solve_baron.rs  solve_gams.rs
