[package]
name = "oximo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true

[features]
default = ["highs", "io"]
highs = ["dep:oximo-highs"]
io = ["dep:oximo-io"]
gurobi = ["dep:oximo-gurobi"]
gams = ["dep:oximo-gams"]

[dependencies]
oximo-expr.workspace = true
oximo-core.workspace = true
oximo-solver.workspace = true
oximo-highs = { workspace = true, optional = true }
oximo-gurobi = { workspace = true, optional = true }
oximo-gams = { workspace = true, optional = true }
oximo-io = { workspace = true, optional = true }

[lints]
workspace = true
